--- a/index.html
+++ b/index.html
@@ -6,38 +6,37 @@
   <title>Portfolio di Elia Giordano</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
   <style>
-    body {
+    html, body {
       margin: 0;
       padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
       font-family: 'Orbitron', sans-serif;
       background: #000;
       color: #00bfff;
-      overflow-x: hidden;
-      position: relative;
     }
 
-    .animated-bg {
+    /* Three.js canvas */
+    canvas#bg {
       position: fixed;
       top: 0;
       left: 0;
-      width: 200%;
-      height: 200%;
-      background: url('https://cdn.pixabay.com/photo/2016/11/29/04/17/space-1867616_1280.jpg') repeat;
-      background-size: cover;
-      animation: moveBg 120s linear infinite;
+      width: 100%;
+      height: 100%;
       z-index: -1;
-      opacity: 0.3;
+      display: block;
     }
 
-    @keyframes moveBg {
-      0% { transform: translate(0, 0); }
-      100% { transform: translate(-500px, -500px); }
-    }
-
-    header {
+    header, .section, .projects-section, footer {
+      position: relative;
+      z-index: 1;
+      background-color: rgba(0, 0, 0, 0.7);
+      margin: 1.5rem;
+      padding: 2rem;
+      border-radius: 15px;
+      box-shadow: 0 0 15px #00bfff;
       text-align: center;
-      padding: 3rem 1rem;
-      background: rgba(0, 0, 0, 0.7);
     }
 
     header h1 {
@@ -45,85 +44,32 @@
       margin-bottom: 0.5rem;
     }
 
-    header p {
-      font-size: 1.2rem;
+    header p, .section p, .projects-section p, footer {
+      font-size: 1.1rem;
       color: #b0dfff;
     }
 
-    .section {
-      padding: 2rem;
-      text-align: center;
-      background: rgba(0, 0, 0, 0.6);
-      margin: 2rem;
-      border-radius: 15px;
-      box-shadow: 0 0 15px #00bfff;
+    .flex-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 2rem;
     }
 
-    .section h2 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
+    .half-section {
+      flex: 1 1 300px;
+      max-width: 45%;
+    }
+
+    @media (max-width: 768px) {
+      .half-section {
+        max-width: 100%;
+      }
     }
 
     .icon {
-      font-size: 4rem;
-      display: inline-block;
-      margin: 1rem;
-      transition: transform 0.3s ease, color 0.3s ease;
-      cursor: pointer;
-    }
-
-    .icon:hover {
-      transform: scale(1.2) rotate(5deg);
-      color: #ffffff;
-      text-shadow: 0 0 15px #00bfff;
-    }
-
-    .cube-container {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 200px;
-      height: 200px;
-      animation: rotateCube 5s linear infinite;
-      perspective: 1000px;
-    }
-
-    .cube {
-      width: 100%;
-      height: 100%;
-      transform-style: preserve-3d;
-      animation: rotateCube 5s linear infinite;
-      position: absolute;
-    }
-
-    .cube-face {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background: #00bfff;
-      border: 2px solid #00bfff;
-      opacity: 0.8;
-    }
-
-    .front  { transform: rotateY(  0deg) translateZ(100px); }
-    .back   { transform: rotateY(180deg) translateZ(100px); }
-    .left   { transform: rotateY(-90deg) translateZ(100px); }
-    .right  { transform: rotateY( 90deg) translateZ(100px); }
-    .top    { transform: rotateX( 90deg) translateZ(100px); }
-    .bottom { transform: rotateX(-90deg) translateZ(100px); }
-
-    @keyframes rotateCube {
-      0% { transform: rotateY(0deg); }
-      100% { transform: rotateY(360deg); }
-    }
-
-    footer {
-      text-align: center;
-      padding: 1rem;
-      color: #ccc;
-      background: rgba(0, 0, 0, 0.8);
-      margin-top: 4rem;
+      font-size: 2.5rem;
+      margin: 0.3rem;
     }
 
     a {
@@ -134,46 +80,191 @@
     a:hover {
       text-shadow: 0 0 10px #00bfff;
     }
+
+    /* Progetti */
+    .projects-section select {
+      padding: 0.5rem;
+      font-size: 1rem;
+      border: 1px solid #00bfff;
+      border-radius: 5px;
+      background: #000;
+      color: #00bfff;
+      margin-bottom: 1rem;
+    }
+
+    .projects-grid {
+      display: none;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1rem;
+    }
+
+    .project-item {
+      width: 150px;
+      cursor: pointer;
+    }
+
+    .project-item img {
+      width: 100%;
+      border-radius: 10px;
+      box-shadow: 0 0 10px #00bfff;
+    }
+
+    /* Modal */
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.9);
+      align-items: center;
+      justify-content: center;
+      z-index: 2;
+    }
+
+    .modal img {
+      max-width: 80%;
+      max-height: 80%;
+      border-radius: 10px;
+    }
+
+    .modal-close {
+      position: absolute;
+      top: 20px;
+      right: 30px;
+      font-size: 2rem;
+      color: #fff;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
-  <div class="animated-bg"></div>
+
+  <canvas id="bg"></canvas>
 
   <header>
     <h1>Elia Giordano</h1>
-    <p>Modellatore 3D • Visual Designer • Creativo dallo spazio</p>
+    <p>Modellatore 3D • Visual Designer • Creativo multidisciplinare</p>
   </header>
 
-  <div class="cube-container">
-    <div class="cube">
-      <div class="cube-face front"></div>
-      <div class="cube-face back"></div>
-      <div class="cube-face left"></div>
-      <div class="cube-face right"></div>
-      <div class="cube-face top"></div>
-      <div class="cube-face bottom"></div>
-    </div>
+  <div class="flex-container">
+    <section class="section half-section">
+      <h2>Chi Sono</h2>
+      <p>Sono un appassionato di animazione e modellazione 3D. Amo dare vita alle idee attraverso forme, colori e movimento. Ogni progetto è per me un viaggio creativo dove tecnica e immaginazione si fondono.</p>
+    </section>
+    <section class="section half-section">
+      <h2>Competenze</h2>
+      <div>
+        <span class="icon" title="Photoshop">🖌️</span>
+        <span class="icon" title="Illustrator">🎨</span>
+        <span class="icon" title="InDesign">📄</span>
+        <span class="icon" title="AutoCAD">📐</span>
+        <span class="icon" title="Inventor">⚙️</span>
+        <span class="icon" title="3ds Max">🏗️</span>
+        <span class="icon" title="Blender">🧊</span>
+      </div>
+      <p>Photoshop, Illustrator, InDesign, AutoCAD, Inventor, 3ds Max, Blender</p>
+    </section>
   </div>
 
-  <div class="section">
-    <h2>Chi Sono</h2>
-    <p>Appassionato di tecnologia, design e forme aliene. Creo esperienze visive uniche che spaziano dal design grafico alla modellazione 3D.</p>
-  </div>
-
-  <div class="section">
-    <h2>Competenze</h2>
-    <p>Photoshop, Illustrator, InDesign, AutoCAD, Inventor, 3ds Max, Blender</p>
-  </div>
-
-  <div class="section">
+  <section class="section">
     <h2>Contatti</h2>
-    <p>Email: elgio0926@gmail.com</p>
-    <p>Telefono: +393515749331</p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/eliagiordano/" target="_blank">Elia Giordano</a></p>
-  </div>
+    <p>Email: <a href="mailto:elgio0926@gmail.com">elgio0926@gmail.com</a></p>
+    <p>Telefono: <a href="tel:+393515749331">+39 351 574 9331</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/elia-giordano" target="_blank">Elia Giordano</a></p>
+  </section>
+
+  <section class="projects-section">
+    <h2>Progetti</h2>
+    <select id="software-select">
+      <option value="">Seleziona software</option>
+      <option value="blender">Blender</option>
+    </select>
+    <div id="blender-projects" class="projects-grid">
+      <div class="project-item"><img src="spherelumvdo.jpg" alt="spherelumvdo" data-gif="spherelumvdo.gif"></div>
+      <div class="project-item"><img src="tazzinavdo.jpg" alt="tazzinavdo" data-gif="tazzinavdo.gif"></div>
+      <div class="project-item"><img src="rubikvdo.jpg" alt="rubikvdo" data-gif="rubikvdo.gif"></div>
+      <div class="project-item"><img src="magicvdo.jpg" alt="magicvdo" data-gif="magicvdo.gif"></div>
+      <div class="project-item"><img src="pallavdo.jpg" alt="pallavdo" data-gif="pallavdo.gif"></div>
+      <div class="project-item"><img src="wtrvdo.jpg" alt="wtrvdo" data-gif="wtrvdo.gif"></div>
+    </div>
+  </section>
 
   <footer>
     © 2025 Elia Giordano. Tutti i diritti riservati.
   </footer>
+
+  <!-- Modal per GIF -->
+  <div id="modal" class="modal">
+    <span class="modal-close">&times;</span>
+    <img id="modal-gif" src="" alt="Project GIF">
+  </div>
+
+  <!-- Three.js e script Progetti -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r148/three.min.js"></script>
+  <script>
+    // Three.js background cube
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+    camera.position.z = 8;
+
+    const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('bg'), alpha: true });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    renderer.setPixelRatio(window.devicePixelRatio);
+
+    const geometry = new THREE.BoxGeometry(6, 6, 6);
+    const material = new THREE.MeshStandardMaterial({ color: 0x00bfff, emissive: 0x00bfff, metalness: 0.9, roughness: 0.1 });
+    const cube = new THREE.Mesh(geometry, material);
+    scene.add(cube);
+
+    const pointLight = new THREE.PointLight(0xffffff, 1.5);
+    pointLight.position.set(15, 10, 10);
+    scene.add(pointLight);
+    scene.add(new THREE.AmbientLight(0x404040));
+
+    function animateCube() {
+      requestAnimationFrame(animateCube);
+      cube.rotation.x += 0.01;
+      cube.rotation.y += 0.01;
+      renderer.render(scene, camera);
+    }
+    animateCube();
+
+    window.addEventListener('resize', () => {
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+    });
+
+    // Gestione menu progetti
+    const softwareSelect = document.getElementById('software-select');
+    const blenderProjects = document.getElementById('blender-projects');
+    softwareSelect.addEventListener('change', () => {
+      blenderProjects.style.display = softwareSelect.value === 'blender' ? 'flex' : 'none';
+    });
+
+    // Popup GIF
+    const modal = document.getElementById('modal');
+    const modalGif = document.getElementById('modal-gif');
+    const closeBtn = document.querySelector('.modal-close');
+    document.querySelectorAll('.project-item img').forEach(img => {
+      img.addEventListener('click', () => {
+        modalGif.src = img.dataset.gif;
+        modal.style.display = 'flex';
+      });
+    });
+    closeBtn.addEventListener('click', () => {
+      modal.style.display = 'none';
+      modalGif.src = '';
+    });
+    modal.addEventListener('click', e => {
+      if (e.target === modal) {
+        modal.style.display = 'none';
+        modalGif.src = '';
+      }
+    });
+  </script>
 </body>
 </html>
