--- a/index.html
+++ b/index.html
@@ -6,277 +6,240 @@
   <title>Portfolio di Elia Giordano</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
   <style>
-    html, body {
+    body {
       margin: 0;
       padding: 0;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
       font-family: 'Orbitron', sans-serif;
       background: #000;
       color: #00bfff;
+      overflow-x: hidden;
+      position: relative;
     }
 
-    /* Three.js canvas */
-    canvas#bg {
+    .animated-bg {
       position: fixed;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
+      width: 200%;
+      height: 200%;
+      background: url('https://cdn.pixabay.com/photo/2016/11/29/04/17/space-1867616_1280.jpg') repeat;
+      background-size: cover;
+      animation: moveBg 120s linear infinite;
       z-index: -1;
-      display: block;
+      opacity: 0.3;
     }
 
-    header, .section, .projects-section, footer {
-      position: relative;
-      z-index: 1;
-      background-color: rgba(255, 255, 255, 0.1);
-      margin: 1.5rem auto;
-      padding: 2rem;
-      border-radius: 20px;
-      box-shadow: 0 0 30px rgba(0, 191, 255, 0.7);
-      max-width: 1000px;
+    @keyframes moveBg {
+      0% { transform: translate(0, 0); }
+      100% { transform: translate(-500px, -500px); }
+    }
+
+    header {
       text-align: center;
+      padding: 3rem 1rem;
+      background: rgba(0, 0, 0, 0.7);
     }
 
     header h1 {
       font-size: 3rem;
       margin-bottom: 0.5rem;
-      color: #e0f7ff;
     }
 
     header p {
       font-size: 1.2rem;
-      color: #c0eaff;
+      color: #b0dfff;
     }
 
-    .flex-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      gap: 2rem;
-      margin: 0 auto;
-      max-width: 1000px;
-    }
-
-    .half-section {
-      flex: 1 1 45%;
-      background-color: rgba(255, 255, 255, 0.05);
-      padding: 1.5rem;
+    .section {
+      padding: 2rem;
+      text-align: center;
+      background: rgba(0, 0, 0, 0.6);
+      margin: 2rem;
       border-radius: 15px;
-      box-shadow: 0 0 20px rgba(0, 191, 255, 0.5);
+      box-shadow: 0 0 15px #00bfff;
     }
 
-    .half-section h2 {
+    .section h2 {
       font-size: 2rem;
       margin-bottom: 1rem;
-      color: #00bfff;
-      text-shadow: 0 0 10px rgba(0, 191, 255, 0.7);
     }
 
-    .half-section p {
-      font-size: 1rem;
-      color: #d0f0ff;
+    .section p {
+      font-size: 1.1rem;
     }
 
-    .icon {
-      font-size: 2.5rem;
-      margin: 0.5rem;
-    }
-
-    .projects-section {
-      margin: 1.5rem auto;
-      max-width: 1000px;
-      background-color: rgba(255, 255, 255, 0.1);
-      padding: 2rem;
-      border-radius: 20px;
-      box-shadow: 0 0 30px rgba(0, 191, 255, 0.7);
-    }
-
-    .projects-section h2 {
-      font-size: 2.5rem;
-      color: #00bfff;
-      text-shadow: 0 0 12px rgba(0, 191, 255, 0.8);
-      margin-bottom: 1.5rem;
-    }
-
-    .projects-grid {
+    .competence-icons {
       display: flex;
-      flex-wrap: wrap;
       justify-content: center;
-      gap: 1rem;
+      gap: 20px;
     }
 
-    .project-item {
-      width: 180px;
+    .competence-icons span {
+      font-size: 4rem;
+      cursor: pointer;
+    }
+
+    .menu-container {
+      display: flex;
+      justify-content: center;
+      margin-top: 2rem;
+    }
+
+    select {
+      font-size: 1rem;
+      padding: 10px;
+      background-color: rgba(0, 0, 0, 0.7);
+      color: #00bfff;
+      border: 2px solid #00bfff;
+      border-radius: 5px;
+    }
+
+    .project {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 2rem;
+      flex-wrap: wrap;
+      display: none; /* Progetti nascosti inizialmente */
+    }
+
+    .project img {
+      width: 200px;
+      height: 200px;
       cursor: pointer;
       transition: transform 0.3s ease;
     }
 
-    .project-item:hover {
-      transform: scale(1.05);
+    .project img:hover {
+      transform: scale(1.1);
     }
 
-    .project-item img {
-      width: 100%;
+    .project video {
+      width: 200px;
+      height: 200px;
       border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0, 191, 255, 0.7);
+      box-shadow: 0 0 15px #00bfff;
     }
 
-    .modal {
-      display: none;
+    footer {
+      text-align: center;
+      padding: 1rem;
+      color: #ccc;
+      background: rgba(0, 0, 0, 0.8);
+      margin-top: 4rem;
+    }
+
+    a {
+      color: #00bfff;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-shadow: 0 0 10px #00bfff;
+    }
+
+    .starry-background {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0,0,0,0.95);
-      align-items: center;
-      justify-content: center;
-      z-index: 2;
+      z-index: -2;
+      animation: rotateStars 60s linear infinite;
     }
 
-    .modal img {
-      max-width: 80%;
-      max-height: 80%;
-      border-radius: 10px;
-      box-shadow: 0 0 20px rgba(255,255,255,0.8);
-    }
-
-    .modal-close {
+    .starry-background .star {
       position: absolute;
-      top: 20px;
-      right: 30px;
-      font-size: 2rem;
-      color: #fff;
-      cursor: pointer;
+      width: 5px;
+      height: 5px;
+      background-color: #fff;
+      border-radius: 50%;
+      opacity: 0.5;
+      animation: starMovement 60s linear infinite;
     }
 
-    footer {
-      margin: 2rem auto;
-      max-width: 1000px;
-      font-size: 0.9rem;
-      color: #888;
+    @keyframes rotateStars {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
     }
 
-    footer a {
-      color: #00bfff;
+    @keyframes starMovement {
+      0% { transform: translate(0, 0); }
+      100% { transform: translate(100px, 100px); }
     }
   </style>
 </head>
 <body>
-
-  <canvas id="bg"></canvas>
+  <div class="starry-background">
+    <!-- Generazione stelle fisse -->
+    <div class="star" style="top: 20%; left: 30%;"></div>
+    <div class="star" style="top: 50%; left: 60%;"></div>
+    <div class="star" style="top: 70%; left: 10%;"></div>
+    <div class="star" style="top: 10%; left: 80%;"></div>
+    <div class="star" style="top: 30%; left: 50%;"></div>
+    <!-- Aggiungi altre stelle a piacere -->
+  </div>
 
   <header>
     <h1>Elia Giordano</h1>
-    <p>Modellatore 3D • Visual Designer • Creativo multidisciplinare</p>
+    <p>Modellatore 3D • Visual Designer • Creativo dallo spazio</p>
   </header>
 
-  <div class="flex-container">
-    <section class="half-section">
-      <h2>Chi Sono</h2>
-      <p>Sono un appassionato di animazione e modellazione 3D. Amo dare vita alle idee attraverso forme, colori e movimento. Ogni progetto è per me un viaggio creativo dove tecnica e immaginazione si fondono.</p>
-    </section>
-    <section class="half-section">
-      <h2>Competenze</h2>
-      <div>
-        <span class="icon" title="Photoshop">🖌️</span>
-        <span class="icon" title="Illustrator">🎨</span>
-        <span class="icon" title="InDesign">📄</span>
-        <span class="icon" title="AutoCAD">📐</span>
-        <span class="icon" title="Inventor">⚙️</span>
-        <span class="icon" title="3ds Max">🏗️</span>
-        <span class="icon" title="Blender">🧊</span>
-      </div>
-      <p>Photoshop, Illustrator, InDesign, AutoCAD, Inventor, 3ds Max, Blender</p>
-    </section>
+  <div class="section">
+    <h2>Chi Sono</h2>
+    <p>Appassionato di tecnologia, design e forme aliene. Creo esperienze visive uniche che spaziano dal design grafico alla modellazione 3D.</p>
   </div>
 
-  <section class="projects-section">
-    <h2>Progetti Blender</h2>
-    <div class="projects-grid">
-      <div class="project-item"><img src="spherelumvdo.jpg" alt="spherelumvdo" data-gif="spherelumvdo.gif"></div>
-      <div class="project-item"><img src="tazzinavdo.jpg" alt="tazzinavdo" data-gif="tazzinavdo.gif"></div>
-      <div class="project-item"><img src="rubikvdo.jpg" alt="rubikvdo" data-gif="rubikvdo.gif"></div>
-      <div class="project-item"><img src="magicvdo.jpg" alt="magicvdo" data-gif="magicvdo.gif"></div>
-      <div class="project-item"><img src="pallavdo.jpg" alt="pallavdo" data-gif="pallavdo.gif"></div>
-      <div class="project-item"><img src="wtrvdo.jpg" alt="wtrvdo" data-gif="wtrvdo.gif"></div>
+  <div class="section">
+    <h2>Competenze</h2>
+    <div class="competence-icons">
+      <span>🖌️</span>
+      <span>🎨</span>
+      <span>🛸</span>
+      <span>✨</span>
     </div>
-  </section>
+    <p>Modellazione 3D, Logo Design, UI futuristica, Animazioni spaziali, Blender, Photoshop, Illustrator, InDesign, AutoCAD, Inventor, 3ds Max</p>
+  </div>
 
-  <section class="section">
-    <h2>Contatti</h2>
-    <p>Email: <a href="mailto:elgio0926@gmail.com">elgio0926@gmail.com</a></p>
-    <p>Telefono: <a href="tel:+393515749331">+39 351 574 9331</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/elia-giordano" target="_blank">Elia Giordano</a></p>
-  </section>
+  <div class="menu-container">
+    <select id="software-select">
+      <option value="">Seleziona un software</option>
+      <option value="blender">Blender</option>
+      <option value="photoshop">Photoshop</option>
+      <option value="illustrator">Illustrator</option>
+      <!-- Aggiungi altri software se necessario -->
+    </select>
+  </div>
+
+  <div id="blender-projects" class="project">
+    <img src="rubikimg.jpg" alt="Rubik" />
+    <video autoplay loop muted>
+      <source src="rubikvdo.gif" type="video/mp4" />
+    </video>
+    <img src="spherelumimg.jpg" alt="Spherlum" />
+    <video autoplay loop muted>
+      <source src="spherelums.gif" type="video/mp4" />
+    </video>
+    <img src="tazzinavdo.jpg" alt="Tazzina" />
+    <video autoplay loop muted>
+      <source src="tazzinavdo.gif" type="video/mp4" />
+    </video>
+  </div>
 
   <footer>
     © 2025 Elia Giordano. Tutti i diritti riservati.
   </footer>
 
-  <!-- Modal per GIF -->
-  <div id="modal" class="modal">
-    <span class="modal-close">&times;</span>
-    <img id="modal-gif" src="" alt="Project GIF">
-  </div>
-
-  <!-- Three.js e script -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r148/three.min.js"></script>
   <script>
-    // Three.js background cube
-    const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-    camera.position.z = 8;
-
-    const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('bg'), alpha: true });
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    renderer.setPixelRatio(window.devicePixelRatio);
-
-    const geometry = new THREE.BoxGeometry(6, 6, 6);
-    const material = new THREE.MeshStandardMaterial({ color: 0x00bfff, emissive: 0x00bfff, metalness: 0.9, roughness: 0.1 });
-    const cube = new THREE.Mesh(geometry, material);
-    scene.add(cube);
-
-    const pointLight = new THREE.PointLight(0xffffff, 1.5);
-    pointLight.position.set(15, 10, 10);
-    scene.add(pointLight);
-    scene.add(new THREE.AmbientLight(0x404040));
-
-    function animate() {
-      requestAnimationFrame(animate);
-      cube.rotation.x += 0.01;
-      cube.rotation.y += 0.01;
-      renderer.render(scene, camera);
-    }
-    animate();
-
-    window.addEventListener('resize', () => {
-      camera.aspect = window.innerWidth / window.innerHeight;
-      camera.updateProjectionMatrix();
-      renderer.setSize(window.innerWidth, window.innerHeight);
-    });
-
-    // Popup GIF
-    const modal = document.getElementById('modal');
-    const modalGif = document.getElementById('modal-gif');
-    const closeBtn = document.querySelector('.modal-close');
-    document.querySelectorAll('.project-item img').forEach(img => {
-      img.addEventListener('click', () => {
-        modalGif.src = img.dataset.gif;
-        modal.style.display = 'flex';
-      });
-    });
-    closeBtn.addEventListener('click', () => {
-      modal.style.display = 'none';
-      modalGif.src = '';
-    });
-    modal.addEventListener('click', e => {
-      if (e.target === modal) {
-        modal.style.display = 'none';
-        modalGif.src = '';
+    document.getElementById("software-select").addEventListener("change", function() {
+      const selectedSoftware = this.value;
+      const blenderProjects = document.getElementById("blender-projects");
+      
+      // Mostra o nascondi i progetti in base al software selezionato
+      if (selectedSoftware === "blender") {
+        blenderProjects.style.display = "flex";
+      } else {
+        blenderProjects.style.display = "none";
       }
     });
   </script>
