--- a/index.html
+++ b/index.html
@@ -1,247 +1,271 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Portfolio di Elia Giordano</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Orbitron', sans-serif;
-      background: #000;
-      color: #00bfff;
-      overflow-x: hidden;
-      position: relative;
-    }
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Portfolio di Elia Giordano</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Orbitron', sans-serif;
+            background: #000;
+            color: #00bfff;
+            overflow-x: hidden;
+            position: relative;
+        }
 
-    .animated-bg {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 200%;
-      height: 200%;
-      background: url('https://cdn.pixabay.com/photo/2016/11/29/04/17/space-1867616_1280.jpg') repeat;
-      background-size: cover;
-      animation: moveBg 120s linear infinite;
-      z-index: -1;
-      opacity: 0.3;
-    }
+        .animated-bg {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 200%;
+            height: 200%;
+            background: url('https://cdn.pixabay.com/photo/2016/11/29/04/17/space-1867616_1280.jpg') repeat;
+            background-size: cover;
+            animation: moveBg 120s linear infinite;
+            z-index: -1;
+            opacity: 0.3;
+        }
 
-    @keyframes moveBg {
-      0% { transform: translate(0, 0); }
-      100% { transform: translate(-500px, -500px); }
-    }
+        @keyframes moveBg {
+            0% { transform: translate(0, 0); }
+            100% { transform: translate(-500px, -500px); }
+        }
 
-    header {
-      text-align: center;
-      padding: 3rem 1rem;
-      background: rgba(0, 0, 0, 0.7);
-    }
+        header {
+            text-align: center;
+            padding: 3rem 1rem;
+            background: rgba(0, 0, 0, 0.7);
+        }
 
-    header h1 {
-      font-size: 3rem;
-      margin-bottom: 0.5rem;
-    }
+        header h1 {
+            font-size: 3rem;
+            margin-bottom: 0.5rem;
+        }
 
-    header p {
-      font-size: 1.2rem;
-      color: #b0dfff;
-    }
+        header p {
+            font-size: 1.2rem;
+            color: #b0dfff;
+        }
 
-    .section {
-      padding: 2rem;
-      text-align: center;
-      background: rgba(0, 0, 0, 0.6);
-      margin: 2rem;
-      border-radius: 15px;
-      box-shadow: 0 0 15px #00bfff;
-    }
+        .section {
+            padding: 2rem;
+            text-align: center;
+            background: rgba(0, 0, 0, 0.6);
+            margin: 2rem;
+            border-radius: 15px;
+            box-shadow: 0 0 15px #00bfff;
+        }
 
-    .section h2 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-    }
+        .section h2 {
+            font-size: 2rem;
+            margin-bottom: 1rem;
+        }
 
-    .section p {
-      font-size: 1.1rem;
-    }
+        .section p {
+            font-size: 1.1rem;
+        }
 
-    .competence-icons {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-    }
+        .competence-icons {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+        }
 
-    .competence-icons span {
-      font-size: 4rem;
-      cursor: pointer;
-    }
+        .competence-icons span {
+            font-size: 4rem;
+            cursor: pointer;
+        }
 
-    .menu-container {
-      display: flex;
-      justify-content: center;
-      margin-top: 2rem;
-    }
+        .menu-container {
+            display: flex;
+            justify-content: center;
+            margin-top: 2rem;
+        }
 
-    select {
-      font-size: 1rem;
-      padding: 10px;
-      background-color: rgba(0, 0, 0, 0.7);
-      color: #00bfff;
-      border: 2px solid #00bfff;
-      border-radius: 5px;
-    }
+        select {
+            font-size: 1rem;
+            padding: 10px;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: #00bfff;
+            border: 2px solid #00bfff;
+            border-radius: 5px;
+            cursor: pointer;
+        }
 
-    .project {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 2rem;
-      flex-wrap: wrap;
-      display: none; /* Progetti nascosti inizialmente */
-    }
+        .project {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 2rem;
+            flex-wrap: wrap;
+            display: none; /* Progetti nascosti inizialmente */
+        }
 
-    .project img {
-      width: 200px;
-      height: 200px;
-      cursor: pointer;
-      transition: transform 0.3s ease;
-    }
+        .project img,
+        .project video {
+            width: 200px;
+            height: 200px;
+            border-radius: 10px;
+            box-shadow: 0 0 15px #00bfff;
+            cursor: pointer;
+            transition: transform 0.3s ease;
+        }
 
-    .project img:hover {
-      transform: scale(1.1);
-    }
+        .project img:hover,
+        .project video:hover {
+            transform: scale(1.1);
+        }
 
-    .project video {
-      width: 200px;
-      height: 200px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px #00bfff;
-    }
+        footer {
+            text-align: center;
+            padding: 1rem;
+            color: #ccc;
+            background: rgba(0, 0, 0, 0.8);
+            margin-top: 4rem;
+        }
 
-    footer {
-      text-align: center;
-      padding: 1rem;
-      color: #ccc;
-      background: rgba(0, 0, 0, 0.8);
-      margin-top: 4rem;
-    }
+        a {
+            color: #00bfff;
+            text-decoration: none;
+        }
 
-    a {
-      color: #00bfff;
-      text-decoration: none;
-    }
+        a:hover {
+            text-shadow: 0 0 10px #00bfff;
+        }
 
-    a:hover {
-      text-shadow: 0 0 10px #00bfff;
-    }
+        .starry-background {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -2;
+            animation: rotateStars 60s linear infinite;
+        }
 
-    .starry-background {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -2;
-      animation: rotateStars 60s linear infinite;
-    }
+        .starry-background .star {
+            position: absolute;
+            width: 5px;
+            height: 5px;
+            background-color: #fff;
+            border-radius: 50%;
+            opacity: 0.5;
+            animation: starMovement 60s linear infinite, twinkle 2s linear infinite alternate;
+        }
 
-    .starry-background .star {
-      position: absolute;
-      width: 5px;
-      height: 5px;
-      background-color: #fff;
-      border-radius: 50%;
-      opacity: 0.5;
-      animation: starMovement 60s linear infinite;
-    }
+        @keyframes rotateStars {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
 
-    @keyframes rotateStars {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
+        @keyframes starMovement {
+            0% { transform: translate(0, 0); }
+            100% { transform: translate(100px, 100px); }
+        }
 
-    @keyframes starMovement {
-      0% { transform: translate(0, 0); }
-      100% { transform: translate(100px, 100px); }
-    }
-  </style>
+        @keyframes twinkle {
+            0% { opacity: 0.5; }
+            100% { opacity: 0.8; }
+        }
+    </style>
 </head>
 <body>
-  <div class="starry-background">
-    <!-- Generazione stelle fisse -->
-    <div class="star" style="top: 20%; left: 30%;"></div>
-    <div class="star" style="top: 50%; left: 60%;"></div>
-    <div class="star" style="top: 70%; left: 10%;"></div>
-    <div class="star" style="top: 10%; left: 80%;"></div>
-    <div class="star" style="top: 30%; left: 50%;"></div>
-    <!-- Aggiungi altre stelle a piacere -->
-  </div>
+    <div class="starry-background">
+        <div class="star" style="top: 15%; left: 25%;"></div>
+        <div class="star" style="top: 60%; left: 70%;"></div>
+        <div class="star" style="top: 35%; left: 10%;"></div>
+        <div class="star" style="top: 80%; left: 50%;"></div>
+        <div class="star" style="top: 10%; left: 90%;"></div>
+        <div class="star" style="top: 50%; left: 30%;"></div>
+        <div class="star" style="top: 75%; left: 85%;"></div>
+        <div class="star" style="top: 20%; left: 65%;"></div>
+        <div class="star" style="top: 40%; left: 45%;"></div>
+        <div class="star" style="top: 90%; left: 15%;"></div>
+        </div>
 
-  <header>
-    <h1>Elia Giordano</h1>
-    <p>Modellatore 3D • Visual Designer • Creativo dallo spazio</p>
-  </header>
+    <header>
+        <h1>Elia Giordano</h1>
+        <p>Modellatore 3D • Visual Designer • Creativo dallo spazio</p>
+    </header>
 
-  <div class="section">
-    <h2>Chi Sono</h2>
-    <p>Appassionato di tecnologia, design e forme aliene. Creo esperienze visive uniche che spaziano dal design grafico alla modellazione 3D.</p>
-  </div>
+    <div class="section">
+        <h2>Chi Sono</h2>
+        <p>Appassionato di tecnologia, design e forme aliene. Creo esperienze visive uniche che spaziano dal design grafico alla modellazione 3D.</p>
+        </div>
 
-  <div class="section">
-    <h2>Competenze</h2>
-    <div class="competence-icons">
-      <span>🖌️</span>
-      <span>🎨</span>
-      <span>🛸</span>
-      <span>✨</span>
+    <div class="section">
+        <h2>Competenze</h2>
+        <div class="competence-icons">
+            <span>🖌️</span>
+            <span>🎨</span>
+            <span>🛸</span>
+            <span>✨</span>
+        </div>
+        <p>Modellazione 3D, Logo Design, UI futuristica, Animazioni spaziali, Blender, Photoshop, Illustrator, InDesign, AutoCAD, Inventor, 3ds Max</p>
+        </div>
+
+    <div class="menu-container">
+        <select id="software-select">
+            <option value="">Seleziona un software</option>
+            <option value="blender">Blender</option>
+            <option value="photoshop">Photoshop</option>
+            <option value="illustrator">Illustrator</option>
+            </select>
     </div>
-    <p>Modellazione 3D, Logo Design, UI futuristica, Animazioni spaziali, Blender, Photoshop, Illustrator, InDesign, AutoCAD, Inventor, 3ds Max</p>
-  </div>
 
-  <div class="menu-container">
-    <select id="software-select">
-      <option value="">Seleziona un software</option>
-      <option value="blender">Blender</option>
-      <option value="photoshop">Photoshop</option>
-      <option value="illustrator">Illustrator</option>
-      <!-- Aggiungi altri software se necessario -->
-    </select>
-  </div>
+    <div id="blender-projects" class="project">
+        <img src="rubikimg.jpg" alt="Modello 3D di un cubo di Rubik" />
+        <video autoplay loop muted>
+            <source src="rubikvdo.gif" type="video/mp4" />
+        </video>
+        <img src="spherelumimg.jpg" alt="Modello 3D di uno spherelum" />
+        <video autoplay loop muted>
+            <source src="spherelums.gif" type="video/mp4" />
+        </video>
+        <img src="tazzinavdo.jpg" alt="Modello 3D di una tazzina" />
+        <video autoplay loop muted>
+            <source src="tazzinavdo.gif" type="video/mp4" />
+        </video>
+        </div>
 
-  <div id="blender-projects" class="project">
-    <img src="rubikimg.jpg" alt="Rubik" />
-    <video autoplay loop muted>
-      <source src="rubikvdo.gif" type="video/mp4" />
-    </video>
-    <img src="spherelumimg.jpg" alt="Spherlum" />
-    <video autoplay loop muted>
-      <source src="spherelums.gif" type="video/mp4" />
-    </video>
-    <img src="tazzinavdo.jpg" alt="Tazzina" />
-    <video autoplay loop muted>
-      <source src="tazzinavdo.gif" type="video/mp4" />
-    </video>
-  </div>
+    <div id="photoshop-projects" class="project">
+        <img src="placeholder_photoshop1.jpg" alt="Progetto Photoshop 1" />
+        <img src="placeholder_photoshop2.jpg" alt="Progetto Photoshop 2" />
+        </div>
 
-  <footer>
-    © 2025 Elia Giordano. Tutti i diritti riservati.
-  </footer>
+    <div id="illustrator-projects" class="project">
+        <img src="placeholder_illustrator1.jpg" alt="Progetto Illustrator 1" />
+        <img src="placeholder_illustrator2.jpg" alt="Progetto Illustrator 2" />
+        </div>
 
-  <script>
-    document.getElementById("software-select").addEventListener("change", function() {
-      const selectedSoftware = this.value;
-      const blenderProjects = document.getElementById("blender-projects");
-      
-      // Mostra o nascondi i progetti in base al software selezionato
-      if (selectedSoftware === "blender") {
-        blenderProjects.style.display = "flex";
-      } else {
-        blenderProjects.style.display = "none";
-      }
-    });
-  </script>
+    <footer>
+        © 2025 Elia Giordano. Tutti i diritti riservati.
+        </footer>
+
+    <script>
+        document.getElementById("software-select").addEventListener("change", function() {
+            const selectedSoftware = this.value;
+            const blenderProjects = document.getElementById("blender-projects");
+            const photoshopProjects = document.getElementById("photoshop-projects");
+            const illustratorProjects = document.getElementById("illustrator-projects");
+
+            // Nascondi tutte le sezioni di progetto
+            blenderProjects.style.display = "none";
+            if (photoshopProjects) photoshopProjects.style.display = "none";
+            if (illustratorProjects) illustratorProjects.style.display = "none";
+
+            // Mostra la sezione corrispondente
+            if (selectedSoftware === "blender") {
+                blenderProjects.style.display = "flex";
+            } else if (selectedSoftware === "photoshop") {
+                if (photoshopProjects) photoshopProjects.style.display = "flex";
+            } else if (selectedSoftware === "illustrator") {
+                if (illustratorProjects) illustratorProjects.style.display = "flex";
+            }
+        });
+    </script>
 </body>
 </html>
