--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
     <!-- Hand and Navigation Menu -->
     <div class="hand-container">
         <!-- Immagine della mano (usando il file locale) -->
-        <img src="hand.png" alt="Mano" class="hand-image">
+        <img src="hand.PNG" alt="Mano" class="hand-image">
         
         <!-- Navigation Menu -->
         <div class="nav-menu">
